页面标题，编辑页面布局修改

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>教师个人主页管理系统</title>
+    <title>学院师资信息管理平台</title>
 <!--    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=5E9O1Z6jlVEaork4KGuDFNxo1XYbuGDv"></script>-->
 
 <!--    <link rel="stylesheet" type="text/css" href="http://localhost:9520/static/css/reset.css">
