--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js"></script>
+<!--    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js"></script>-->
   </body>
 </html>
