--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blob-polyfill/4.0.20190430/Blob.js"></script>
   </head>
   <body>
+
     <div id="app"></div>
 <!--    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.js"></script>-->
   </body>
 </html>
+<style type="text/css">
+
+</style>
