--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=5E9O1Z6jlVEaork4KGuDFNxo1XYbuGDv"></script>
     <script type="text/javascript" src="http://47.106.132.95:2333/vcdn/js/bmap.js"></script>
     <script src="https://gw.alipayobjects.com/os/antv/assets/lib/jquery-3.2.1.min.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/blob-polyfill/4.0.20190430/Blob.js"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/blob-polyfill/4.0.20190430/Blob.js"></script>-->
   </head>
   <body>
 
